[fix] modificações para adaptar a skill